<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhitesmoke"
    android:orientation="vertical" >
    <WebView
        android:id="@+id/webpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layerType="software"/>
    <LinearLayout
        android:id="@+id/retry_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="180dp"
        android:visibility="invisible">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@mipmap/icon_network_error_white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:text="@string/network_error"
                android:textSize="25dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/checkNetWork"
                android:textSize="20dp"
                android:gravity="center"/>
            <Button
                android:id="@+id/retry_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_gravity="center"
                android:text="@string/retry"
                android:textColor="@color/colorWhitesmoke"
                android:textSize="20dp"
                android:textStyle="normal"
                android:background="@drawable/shape_bottom_gary"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>