<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/all_linear"
    android:orientation="vertical"
    android:background="@mipmap/bg_home">

    <com.mryu.devstudy.layout.KeyboardLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@drawable/shape_bottom_write">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/please_login"
                android:textStyle="normal"
                android:textColor="@color/colorBlack"
                android:textSize="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/shape_bottom_input">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@mipmap/icon_username"
                        android:contentDescription="@null" />
                    <EditText
                        android:id="@+id/username_edit"
                        style="@style/EditTheme"
                        android:hint="@string/user_edit_hint"
                        android:layout_marginLeft="6dp"
                        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@."
                        android:inputType="text" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="15dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/shape_bottom_input">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@mipmap/icon_password"
                        android:contentDescription="@null" />
                    <EditText
                        android:id="@+id/password_edit"
                        style="@style/EditTheme"
                        android:hint="@string/password_edit_hint"
                        android:layout_marginLeft="6dp"
                        android:layout_width="0dp"
                        android:layout_weight="7.8"
                        android:inputType="textPassword" />
                    <ToggleButton
                        style="@style/EditTheme"
                        android:id="@+id/show_password"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="24dp"
                        android:textOn=""
                        android:textOff=""
                        android:background="@mipmap/icon_close_password"
                        android:visibility="invisible"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/account_login"
                style="@style/ButtonTheme"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_nextstep_unselect"
                android:text="@string/login_text"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center">
                <TextView
                    android:id="@+id/forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/forget_password"
                    android:gravity="center"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:layout_width="2dp"
                    android:layout_height="15dp"
                    android:background="@color/colorGray"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
                <TextView
                    android:id="@+id/start_regist"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/go_register"
                    android:gravity="center"
                    android:textStyle="bold">
                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="8dp">
                <ImageView
                    android:id="@+id/qq_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_qqlogin_btnstatus" />

                <ImageView
                    android:id="@+id/wx_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/shape_wxlogin_btnstatus" />

                <ImageView
                    android:id="@+id/wb_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/shape_wblogin_btnstatus" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="18dp">
                <CheckBox
                    android:theme="@style/AppTheme"
                    android:id="@+id/check_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:hint="@string/agree_tint"
                    android:textSize = "15dp"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1" />
                <TextView
                    android:id="@+id/user_ment"
                    android:text="@string/user_rule_tint"
                    android:textSize = "15dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="和"
                    android:layout_gravity="center"
                    android:textSize="15dp"/>
                <TextView
                    android:id="@+id/user_privacy"
                    android:textSize = "15dp"
                    android:textStyle="bold"
                    android:text="@string/private_rule_tint"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

    </com.mryu.devstudy.layout.KeyboardLayout>
</ScrollView>